# SGAA-MongoDB

./: README.md  database.py  divisao_tarefas.txt  main.py  pyproject.toml
controles/: aluno_control.py  exercicio_control.py  treinador_control.py  treino_control.py
database_collections/: sgaa.aluno.json  sgaa.exercicio.json  sgaa.treinador.json  sgaa.treino.json
modelos/: aluno_model.py  exercicio_model.py  treinador_model.py  treino_model.py
rotas/: aluno_router.py  exercicio_router.py  home_router.py  treinador_router.py  treino_router.py
